Fix footer on small devices

--- a/public/index.css
+++ b/public/index.css
@@ -69,6 +69,15 @@ footer {
     padding-top: 1em;
 }
 
+@media(max-width: 500px) {
+    footer {
+        flex-direction: column;
+    }
+    footer span {
+        line-height: 1.5;
+    }
+}
+
 section h2,
 section h1 {
     font-family: "Coda", sans-serif;
